--- a/app/assets/stylesheets/pages/_show-venue.scss
+++ b/app/assets/stylesheets/pages/_show-venue.scss
@@ -1,5 +1,5 @@
 .overlay {
-  margin-top: -90px;
+  margin-top: -60px;
 }
 
 .edit-overlay {
@@ -26,9 +26,10 @@
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  overflow: scroll; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  text-decoration: none;
 }
 
 /* Modal Content/Box */
@@ -56,10 +57,21 @@
 }
 
 #show-card {
-  border-radius: 10px;
+  border-radius: 8px;
   border-color: rgba(13, 28, 42, 0.9);
 }
 
 .gold {
   color: rgb(255, 215, 0);
 }
+
+#amen-icon {
+
+  font-size: 40px;
+  color: rgba(13, 28, 42, 0.9);
+}
+
+.no-dec {
+  text-decoration: none;
+}
+
