--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,5 +29,10 @@
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="mt-3">
+        <%= render "devise/shared/links" %></div>
+      </div>
+  </div>
 </div>
