--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="profile_items">
-    <h1 >1 - Your Bookings</h1>
+  <div class="profile_items col-lg-4 offset-lg-4">
+    <h1 >Your Bookings</h1>
   </div>
     <% if current_user.bookings.count == 0%>
       <p class= "pl-5 ml-4">No bookings yet</p>
