--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -8,17 +8,17 @@
   <div class="col-lg-12">
     <%= render "bookings/index" %>
   </div>
-    <div class="profile_items">
-      <h1 >2 - Venues you own</h1>
+    <div class="profile_items col-lg-4 offset-lg-4">
+      <h1>Venues you own</h1>
     </div>
     <% if current_user.venues.count == 0 %>
       <p class= "pl-5 ml-4">You haven't listed any venues yet</p>
     <% else %>
       <div class="col-lg-12">
         <div class="container">
-          <div class="row justify-content-around">
+          <div class="row justify-content-center">
             <% current_user.venues.each do |venue| %>
-              <div class="card col-lg-5 mr-3 ml-3 mb-5 mt-3">
+              <div id="show-card" class="card col-lg-5 mr-2 ml-2 mb-5 mt-3">
                 <img class="card-img-top pt-3 rounded" src="<%= venue.photo %>" alt="Card image cap">
                 <div class="card-body">
                 <h3 class="card-title"><%= venue.name %></h3>
@@ -32,7 +32,7 @@
     <% end %>
   </div>
   <div class="text-align">
-  <%= link_to "Add Venue",new_venue_path, class: "btn"  %>
+  <%= link_to "Add a Venue",new_venue_path, class: "btn"  %>
   </div>
 </div>
 
