--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -21,9 +21,9 @@
           <div class="row justify-content-between pl-3 pr-3">
             <h5 class="text-left pb-3"><%= @venue.address %></h5>
             <a href="#modal" style="text-decoration:none; color: black;">
-            <h4 class="text-center mb-0"><% if @venue.rating.nil? == true %> No ratings yet
+            <h4 class="text-center mb-0"><% if @venue.result.nan? == true %> No ratings yet
               <% else %>
-                <span class="gold"><% if @venue.result.between?(4.8, 5) %>
+                 <span class="gold"><% if @venue.result.between?(4.8, 5) %>
                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 
                 <% elsif @venue.result.between?(4.5, 4.799)  %>
