--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,6 +1,6 @@
 
-<div class="container">
-  <div class="mapwrapper">
+<div class="container" id="map_container">
+  <div class="mapwrapper" style="z-index:10">
     <div
       id="map"
       data-markers="<%= @markers.to_json %>"
@@ -8,20 +8,19 @@
     >
     </div>
   </div>
-
-  <div class="col-lg-12" id="results-under-map">
+  <div class="col-lg-12" id="results-under-map" style="z-index:1">
     <div class="container">
       <div class="row justify-content-around">
         <% @venues.each do |venue| %>
-          <div class="card col-lg-5 mr-3 ml-3 mb-5 mt-3">
+          <div id="show-card" class="card col-lg-4 mr-1 ml-1 mb-3 mt-3">
             <img class="card-img-top pt-3 rounded" src="<%= venue.photo %>" alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body p-1">
               <h3 class="card-title"><%= venue.name %></h3>
-              <div class="card-title"><strong>Address: </strong> <%= venue.address %></div>
-              <div class="card-title"><strong>Price from: </strong> £ <%= venue.price %></div>
-              <div class="card-title"><strong>Rating: </strong> <%= venue.rating %></div>
+              <div class="card-title m-1"><strong>Address: </strong> <%= venue.address %></div>
+              <div class="card-title m-1"><strong>Price from: </strong> £ <%= venue.price %></div>
+              <div class="card-title m-1"><strong>Rating: </strong> <%= venue.rating %></div>
             </div>
-            <a href="<%= venue_path(venue.id) %>" id ="btn-color-override"class="btn btn-primary btn-block">Venue Details</a>
+            <a href="<%= venue_path(venue.id) %>" id ="btn-color-override"class="btn btn-primary btn-block pb-2">Venue Details</a>
           </div>
         <% end %>
       </div>
