--- a/app/views/venue_reviews/new.html.erb
+++ b/app/views/venue_reviews/new.html.erb
@@ -1,11 +1,11 @@
-<div class="container center-div">
-  <div class="text-center">
-    <%= simple_form_for [@booking, @review] do |f| %>
-      <%= f.input :description, label: 'Tell us about your stay', as: :text %>
-        <div id="stars-center">
-          <%= f.input :rating, collection: (1..5).to_a %>
-        </div>
-          <%= f.submit "Add a review", class: "btn btn-primary" %>
-    <% end %>
-  </div>
+<div class="my-container">
+    <div class="text-center">
+      <%= simple_form_for [@booking, @review] do |f| %>
+        <%= f.input :description, label: 'Tell us about your stay', as: :text %>
+          <div id="stars-center">
+            <%= f.input :rating, collection: (1..5).to_a %>
+          </div>
+            <%= f.submit "Add a review", class: "btn btn-primary" %>
+      <% end %>
+    </div>
 </div>
