--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -24,31 +24,32 @@
             <a data-toggle="modal" data-target="#exampleModalScrollable" style="text-decoration:none; color: black;">
             <h4 class="text-center mb-0"><% if @venue.rating.nil? == true %> No ratings yet
               <% else %>
-                 <span class="gold"><% if @venue.result.between?(4.8, 5) %>
+                 <span class="gold">
+                <% if @venue.result >= 4.8 && @venue.result <= 5 %>
                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-                <% elsif @venue.result.between?(4.5, 4.799)  %>
+                <% elsif @venue.result >= 4.5 && @venue.result <= 4.799 %>
                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-                <% elsif @venue.result.between?(4, 4.5) %>
+                <% elsif @venue.result >= 4 && @venue.result <= 4.5 %>
                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-                <% elsif @venue.result.between?(3.5, 3.99) %>
+                <% elsif @venue.result >= 3.5 && @venue.result <= 3.99 %>
                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-                <% elsif @venue.result.between?(3, 3.5) %>
+                <% elsif @venue.result >= 3 && @venue.result <= 3.5 %>
                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-                <% elsif @venue.result.between?(2.5, 2.99) %>
+                <% elsif @venue.result >= 2.5 && @venue.result <= 2.99 %>
                 <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-                <% elsif @venue.result.between?(2, 2.5) %>
+                <% elsif @venue.result >= 2 && @venue.result <= 2.5 %>
                 <i class="fas fa-star"></i><i class="fas fa-star"></i>
 
-                <% elsif @venue.result.between?(1.5, 1.99) %>
+                <% elsif @venue.result >= 1.5 && @venue.result <= 1.99 %>
                 <i class="fas fa-star"></i><i class="fas fa-star-half"></i>
 
-                <% elsif @venue.result.between?(1, 1.5)  %>
+                <% elsif @venue.result >= 1 && @venue.result <= 1.5 %>
                 <i class="fas fa-star"></i>
                 <% end  %></span>
                 <span class="no-dec">(<%= @venue.result %>)</span>
