added autocomplete onto add venue

--- a/app/views/venues/_form.html.erb
+++ b/app/views/venues/_form.html.erb
@@ -10,7 +10,7 @@
   </div>
 
   <div class="form-style">
-  <%= f.input :address, label: 'Full address of the venue', placeholder: "Address"  %>
+  <%= f.input :address, label: 'Full address of the venue', placeholder: "Address", input_html: { class: 'query'}  %>
   </div>
 
   <div class="form-style">
