--- a/app/views/venues/edit.html.erb
+++ b/app/views/venues/edit.html.erb
@@ -1,1 +1,4 @@
-<%= render 'form' %>
+<div class="my-container">
+  <h1 class="form-h1-padding text-center">Edit your venue</h1>
+  <%= render 'form' %>
+</div>
