--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,2 +1,5 @@
-<%= render 'form' %>
+<div class="my-container">
+  <h1 class="form-h1-padding text-center">Add your venue!</h1>
+  <%= render 'form' %>
+</div>
 
