no results view logic

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,6 +67,12 @@ body {
   }
 }
 
+#no-results-msg {
+  text-align: center;
+  padding-top: 50px;
+  color: rgb(50, 50, 50);
+  font-size: 20px;
+}
 
 
 
