--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,4 +1,3 @@
-
 // .popup {
 //   height: 100vh;
 //   width: 100%;
@@ -10,7 +9,6 @@
 //   opacity: 0;
 //   visibility: hidden;
 //   transition: all .3s;
-
 //   &_close {
 //     &:link,
 //     &:visited {
@@ -24,12 +22,10 @@
 //       transition: all .2s;
 //       line-height: 1;
 //     }
-
 //     &:hover {
 //       color: red;
 //     }
 //   }
-
 //   &_content {
 //     position: absolute;
 //       top: 50%;
@@ -45,9 +41,6 @@
 //     transform: translate(-50%, -50%) scale(.5);
 //     transition: all .4s .2s;
 //   }
-
-
-
 //   //OPEN STATES
 //   &:target {
 //     opacity: 1;
@@ -57,5 +50,7 @@
 //     opacity: 1;
 //     transform: translate(-50%, -50%) scale(1);
 //   }
-
 // }
+.add-review-modal {
+  height: 400px;
+}
