--- a/app/views/bookings/_index.html.erb
+++ b/app/views/bookings/_index.html.erb
@@ -28,7 +28,31 @@
 
 
           <a href="<%= venue_path(booking.venue_id) %>" id ="btn-color-override" class="btn btn-primary btn-block">Venue Details</a>
-           <%= link_to "Review this venue", new_booking_venue_review_path(booking), id: "btn-color-override", class: "btn btn-primary btn-block" %>
+
+           <!-- Button trigger modal -->
+            <button type="button" id="btn-color-override" class="btn btn-primary btn-block" data-toggle="modal" data-target="#exampleModal">
+              Review this venue
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add Review</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body add-review-modal">
+                    <%= render "venue_reviews/new", booking: booking, venue_review: VenueReview.new %>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
 
         </div>
       </div>
