--- a/app/views/venue_reviews/new.html.erb
+++ b/app/views/venue_reviews/new.html.erb
@@ -1,7 +1,9 @@
 <div class="my-container">
-    <div class="text-center">
+    <div class="text-center  justify-content-center">
       <%= simple_form_for [@booking, @review] do |f| %>
+      <div class="d-inline-block" style="width: 500px;">
         <%= f.input :description, label: 'Tell us about your stay', as: :text %>
+      </div>
           <div id="stars-center">
             <%= f.input :rating, collection: (1..5).to_a %>
           </div>
