--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "pages/index";
 
 
+
 h2 {
   margin-top: 16px;
   margin-bottom: 16px;
@@ -65,6 +66,13 @@ body {
     font-size: 34px;
     margin: 0;
   }
+}
+
+#booking-select p:hover {
+  background-color: rgba(13,28,42,0.9);
+  padding-left: 6px;
+  border-radius: 3px;
+  color:#fff;
 }
 
 
